#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(
        [HTML to PDF conversion using QT WebKit],
        [0.12.4],
        [david@nebauer.org],
        [wkhtmltopdf-static],
)
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_FILES([
    Makefile
    wkhtmltoimage.1
    wkhtmltoimage
    wkhtmltopdf.1
    wkhtmltopdf
])
AC_OUTPUT
